[gd_scene load_steps=7 format=3 uid="uid://ehuu2j7go2ny"]

[ext_resource type="Script" path="res://Scenes/Menu.gd" id="1_kqt74"]
[ext_resource type="FontFile" uid="uid://bd4pfiw0esrnq" path="res://Assets/Fonts/bit5x3.ttf" id="1_oo5hk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwkwg"]
bg_color = Color(0, 0, 0, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ix1ob"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nock5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vgrsg"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kqt74")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_oo5hk")
theme_override_font_sizes/font_size = 125
text = "Pong2D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="ZeroPlayers" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.964706, 0.964706, 0.00392157, 1)
theme_override_colors/font_hover_color = Color(0.964706, 0.964706, 0.00392157, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.964706, 0.00392157, 1)
theme_override_fonts/font = ExtResource("1_oo5hk")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rwkwg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ix1ob")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nock5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vgrsg")
text = "0 Players"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="OnePlayer" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.964706, 0.964706, 0.00392157, 1)
theme_override_colors/font_hover_color = Color(0.964706, 0.964706, 0.00392157, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.964706, 0.00392157, 1)
theme_override_fonts/font = ExtResource("1_oo5hk")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rwkwg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ix1ob")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nock5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vgrsg")
text = "1 Player"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="TwoPlayers" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.964706, 0.964706, 0.00392157, 1)
theme_override_colors/font_hover_color = Color(0.964706, 0.964706, 0.00392157, 1)
theme_override_colors/font_focus_color = Color(0.964706, 0.964706, 0.00392157, 1)
theme_override_fonts/font = ExtResource("1_oo5hk")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_rwkwg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ix1ob")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nock5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vgrsg")
text = "2 Players"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/ZeroPlayers" to="." method="_on_zero_players_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/OnePlayer" to="." method="_on_one_player_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/TwoPlayers" to="." method="_on_two_players_pressed"]
